# plotsr

./: .gitignore  README.md  README.rst  marker_point_type.txt  meta.yaml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
conda.recipe/: build.sh  meta.yaml
config/: base.cfg  genomes.txt  markers.bed  test_markers.bed  tracks.txt
example/: Giraut2011_centromeres.bed  TAIR10_Filtered.chrlen  TAIR10_GFF3_genes.bed  TAIR10_GFF3_transposons.bed  base.cfg  col_ler.syri.bedpe  col_lersyri.filtered.out  cvi.chrlen  cvi_erisyri.filtered.out  eri.chrlen  genomes.txt  ler.chrlen  ler_cvisyri.filtered.out  markers.bed  plotsr.sh  plotsr_available_font_names.txt  tracks.txt
plotsr/: __init__.py  _version  converter.py  func.py  main.py  plotsr  plotsr.py  plotsr.sh  plotsr_func.py
plotsr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
plotsr/scripts/: converter.py  func.py  pansyri.py  plotsr.py
test/: pytest.py  test_plotsr.py
test/test_data/: genomes.txt  ler_chr4.fa.gz.fai  tair10_chr4.fa.gz.fai
